# misowa

./: CMakeLists.txt  README.md  run.ps1
cmd/: main.cpp
include/engine/: game.h  movement.h  shader.h
include/glad/: glad.h
include/graphics/: material.h  mesh.h  transform.h
include/namespace/: color.h  default.h  input.h  physic.h  rule.h
include/nodes/: camera.h
include/nodes/body/: body.h  dynamic.h  static.h
include/render_type/: gui.h  world.h
include/singleton/: gl.h  system.h
include/source/world/: player.h
src/: glad.c
src/engine/: game.cpp  movement.cpp  shader.cpp
src/graphics/: material.cpp  mesh.cpp  transform.cpp
src/namespace/: color.cpp  default.cpp  input.cpp  physic.cpp  rule.cpp
src/nodes/: camera.cpp
src/nodes/body/: body.cpp  dynamic.cpp  static.cpp
src/render_type/: gui.cpp  world.cpp
src/singleton/: gl.cpp  system.cpp
src/source/world/: player.cpp
